...
        <variable
            name="swipeFragment"
            type="org.rowanhamwood.hungr.ui.swipe.SwipeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/swipeErrorImage"
            android:layout_width="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002"
            app:srcCompat="@drawable/oops" />

        <com.yuyakaido.android.cardstackview.CardStackView
            android:id="@+id/card_stack_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
...
