<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_swipe"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/title_swipe" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_recipe_list"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_recipe_list" />

</menu>