...
    <variable
        name="viewModel"
        type="org.rowanhamwood.hungr.viewmodel.RecipeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipelist_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
...
